--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header>
         <h1>How Well Do You Really Know Me?</h1>
         <div>
-          <img src="images/kita.png" alt="Kita" />
+          <img src="images/kita-mobile.png" alt="Kita" />
         </div>
         <h2 id="name">Nikkita Leftwich</h2>
         <p id="end" class="hide"></p>
